Execute query on dataSource on demand
