# lib/executorService.js
@@ -52,8 +52,10 @@ function getStatus(ds_id){
 }
 
 function executeDataSource(ds, adapterProperties) {
-    // TODO
-    // error.type = adapterProperties must validate
+    // TODO try to reconfigure if the configuration fails
+    var adapter = AdapterManager.getAdapter(ds.adapter);
+    var configuration = configurationMap[ds._id];
+    return adapter.execute(configuration,adapterProperties);
 }
 
 module.exports = {
